# rusty-clock

./: Cargo.toml
portable/: Cargo.toml
portable/src/: alarm.rs  button.rs  datetime.rs  lib.rs
portable/src/ui/: header.rs  menu.rs  mod.rs  seven_segments.rs  state.rs
src/: main.rs
