[package]
name = "rusty-clock"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[workspace]

[dependencies]
portable = { path = "portable" }
cortex-m = "0.7.2"
cortex-m-rtfm = "0.5.3"
panic-semihosting = "0.5.6"
bme280 = "0.2.1"
pwm-speaker = { git = "https://github.com/TeXitoi/pwm-speaker", branch = "master" }
epd-waveshare = { version = "0.4.0 ", features = ["type_a_alternative_faster_lut"] }
embedded-hal = "0.2.5"
feather_m0 = "0.9.0"

[profile.dev]
opt-level = 1
lto = true
incremental = false

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
