[package]
name = "rusty-clock"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[workspace]

[dependencies]
portable = { path = "portable" }
cortex-m = "0.6.7"
cortex-m-rt = "0.6.14"
cortex-m-rtic = "0.5.6"
panic-semihosting = "0.5.6"
epd-waveshare = "0.4.0 "
embedded-hal = { version = "0.2.5", features = ["unproven"] }
atsamd21g = "0.9.0"
atsamd-hal = "0.12.0"
feather_m0 = "0.9.0"

[profile.dev]
opt-level = 1
lto = true
incremental = false

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
