[package]
name = "portable"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
embedded-graphics = "0.6.1"
heapless = "0.7.1"
epd-waveshare = { version = "0.4.0", features = ["type_a_alternative_faster_lut"] }
embedded-hal = { version = "0.2.5", features = ["unproven"] }
